[front] - feature: add 'useCase' parameter to search API
 - Extended search API to support a 'useCase' parameter with enum options
 - The new parameter helps differentiate search contexts, such as 'pasteUrl' or 'searchNode'
