# front/pages/api/v1/w/[wId]/search.ts
@@ -56,7 +56,10 @@ import type { WithAPIErrorResponse } from "@app/types";
  *                 description: List of specific node IDs to search
  *                 items:
  *                   type: string
- *
+ *               useCase:
+ *                 type: string
+ *                 description: The use case for this search
+ *                 enum: [pasteUrl, searchNode]
  *     responses:
  *       200:
  *         description: Search results retrieved successfully
