# front/public/swagger.json
@@ -1380,6 +1380,14 @@
                     "items": {
                       "type": "string"
                     }
+                  },
+                  "useCase": {
+                    "type": "string",
+                    "description": "The use case for this search",
+                    "enum": [
+                      "pasteUrl",
+                      "searchNode"
+                    ]
                   }
                 }
               }
